sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var chgtfait : Boolean = true
	for(i<- 0 to getNombreValeurs()-2){
				if (tab(i)> tab(i+1)){
					while(!chgtfait){
						echange(i:Int , i+1 :int)
					}
				}
	}
}
